# docs/swagger.yaml
@@ -1,4 +1,17 @@
 definitions:
+  github_com_oliveirabalsa_go-globalhitss-be_app_dto.PaginationResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/github_com_oliveirabalsa_go-globalhitss-be_app_model.Client'
+        type: array
+      next_page:
+        type: integer
+      page:
+        type: integer
+      total_pages:
+        type: integer
+    type: object
   github_com_oliveirabalsa_go-globalhitss-be_app_model.Client:
     properties:
       address:
@@ -32,7 +45,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /clients:
+  /api/v1/clients:
     get:
       consumes:
       - application/json
@@ -44,7 +57,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/github_com_oliveirabalsa_go-globalhitss-be_app_model.Client'
+              $ref: '#/definitions/github_com_oliveirabalsa_go-globalhitss-be_app_dto.PaginationResponse'
             type: array
       summary: Get a list of clients
       tags:
@@ -74,7 +87,7 @@ paths:
       summary: Create a new client
       tags:
       - clients
-  /clients/{id}:
+  /api/v1/clients/{id}:
     delete:
       consumes:
       - application/json
